<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_my_jobs"
            android:icon="@drawable/ic_work"
            android:title="@string/my_jobs" />
        <item
            android:id="@+id/nav_create_resume"
            android:icon="@drawable/ic_description"
            android:title="@string/create_resume" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message"
            android:title="@string/messages" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="Sozlamalar" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>